fix nav position indicator

--- a/docs/main.styl
+++ b/docs/main.styl
@@ -189,12 +189,11 @@ nav
 
   #slider
     position: absolute
-    transition(all, 200ms, ease-in-out, 0);
+    transition(all, 250ms, ease-out, 0);
     display: block
     height: 20px
     width: 3px
     background: brightblue
-    roundall(5px)
     margin-left: 5px
 
 main
