--- a/docs/main.css
+++ b/docs/main.css
@@ -124,20 +124,14 @@ nav a.active {
 }
 nav #slider {
   position: absolute;
-  -webkit-transition: all 200ms ease-in-out 0;
-  -o-transition: all 200ms ease-in-out 0;
-  transition: all 200ms ease-in-out 0;
-  -moz-transition: all 200ms ease-in-out 0;
+  -webkit-transition: all 250ms ease-out 0;
+  -o-transition: all 250ms ease-out 0;
+  transition: all 250ms ease-out 0;
+  -moz-transition: all 250ms ease-out 0;
   display: block;
   height: 20px;
   width: 3px;
   background: #56bceb;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  -o-border-radius: 5px;
-  -border-radius: 5px;
-  border-radius: 5px;
   margin-left: 5px;
 }
 main {
