--- a/index.jade
+++ b/index.jade
@@ -4,6 +4,13 @@ html
         link(type="text/css", rel="stylesheet", href="docs/main.css")
         link(type="text/css", rel="stylesheet", href="docs/&yet-highlight.css")
         title humanjavascript docs
+        script.
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+          ga('create', 'UA-44685415-1', 'humanjavascript.com');
+          ga('send', 'pageview');
     body
       nav
         .warning
