--- a/template/clienttemplates/pages/collectionDemo.jade
+++ b/template/clienttemplates/pages/collectionDemo.jade
@@ -3,9 +3,9 @@ section.page.pageOne
 
   p Intelligently rendering collections can be a bit tricky. 
 
-  p <a href="https://github.com/henrikjoreteg/human-view">HumanView's</a> <code>renderCollection()</code> method makes it sipmle.
+  p <a href="https://github.com/henrikjoreteg/human-view">HumanView's</a> <code>renderCollection()</code> method makes it simple.
 
-  p The only code requried to manage the collection is:
+  p The only code required to manage the collection is:
 
   pre
     code
