--- a/template/shared/clienttemplates/pages/info.jade
+++ b/template/shared/clienttemplates/pages/info.jade
@@ -1,47 +1,8 @@
 section.page.pageTwo
   h2 More Info
 
-  p This is a demo app by <a href="http://twitter.com">Henrik Joreteg</a>.
+  p This app was generated with the humanjs cli tool. If you have questions reference the humanjs docs at <a href="http://docs.humanjavascript.com">docs.humanjavascript.com</a>.
 
+  p For a more in-depth look at the tools and approaches used, check out the <a href="http://humanjavascript.com">Human Javascript book</a>.
 
-  h4 Relevant links:
-
-  ul
-    li 
-      a(href="http://humanjavascript.com") human javascript
-      |  &mdash; the book
-
-    li 
-      a(href="https://github.com/HenrikJoreteg/humanjs-sample-app") github repo 
-      |  &mdash; for this app
-
-    li 
-      a(href="http://andyet.com") &yet
-      |  &mdash; The company behind this effort.
-
-  h4 Finding Packages
-
-  ul
-    li
-      a(href="http://projects.joreteg.com/humanjs-resources/") humanjs resources
-      |  &mdash; A few curated modules with a quick search
-
-    li
-      a(href="https://github.com/component") Component 
-      |  &mdash; Lots of tools here in tiny modules. Most are on npm as {{name}}-component
-
-    li
-      a(href="http://browserify.org/search") Browserify module search
-      |  &mdash; Searches npm for browserify packages
-
-  h4 Apps Built this way
-
-  ul
-    li 
-      a(href="http://andbang.com") And Bang
-      |  &mdash; Team same-pagification tool. Realtime chat + task management
-
-    li 
-      a(href="http://talky.io") Talky 
-      |  &mdash; Free, zero-setup, no-account, peer-to-peer encrypted video calls
-
+  p You can also reach out to <a href="http://twitter.com/henrikjoreteg">@HenrikJoreteg</a> on twitter.
