add person detail page and fetching single item example to generated app

--- a/template/shared/templates/includes/person.jade
+++ b/template/shared/templates/includes/person.jade
@@ -1,5 +1,6 @@
 li.person
-  img.avatar(width="40", height="40")
-  span.name
-  span 
-    a.delete(href="#") delete
+  img(role="avatar", width="40", height="40")
+  a(role="name")
+  span  
+    a.btn(role="action-edit") edit 
+    a.btn(href="#", role="action-delete") delete
