--- a/template/shared/templates/pages/info.jade
+++ b/template/shared/templates/pages/info.jade
@@ -1,8 +1,4 @@
 section.page.pageTwo
-  h2 More Info
+  h2 Simple Page Example
 
-  p This app was generated with the humanjs cli tool. If you have questions reference the humanjs docs at <a href="http://docs.humanjavascript.com">docs.humanjavascript.com</a>.
-
-  p For a more in-depth look at the tools and approaches used, check out the <a href="http://humanjavascript.com">Human Javascript book</a>.
-
-  p You can also reach out to <a href="http://twitter.com/henrikjoreteg">@HenrikJoreteg</a> on twitter.
+  p This page was rendered by a simple page view file at client/pages/info.js.
