Position buttons and style the people

--- a/template/shared/public/css/app/main.styl
+++ b/template/shared/public/css/app/main.styl
@@ -7,3 +7,11 @@
 // you styles here:
 body
   background: white
+
+.person
+  border-bottom : 1px solid #ddd
+
+.action-btns
+  position : relative
+  top      : 5px
+  float	   : right
