--- a/template/shared/templates/includes/person.jade
+++ b/template/shared/templates/includes/person.jade
@@ -1,6 +1,6 @@
-li.person(style = "border-bottom:1px solid #ddd;")
+li.person
   img(role="avatar", width="40", height="40")
   a(role="name")
-  div(style = "float:right; position: relative; top: 5px;")  
+  div.action-btns  
     a.btn(role="action-edit") edit 
     a.btn(href="#", role="action-delete") delete
