update to bootstrap 3.2 update html with new bootstrap classes override template for inputs with bootstrap style html remove zepto add ampersand-dom modify logic for selecting active nav items only navigate in app if no modifier keys are pressed during click

--- a/template/shared/templates/body.jade
+++ b/template/shared/templates/body.jade
@@ -1,14 +1,14 @@
 body
-  .container
-    .navbar
-      .navbar-inner
-        a.brand(href="#") {{{title}}}
-        ul.nav
-          li
+  nav.navbar.navbar-default
+    div.container-fluid
+      div.navbar-header
+        a.navbar-brand(href='/') {{{title}}}
+      ul.nav.navbar-nav
+        li
             a(href="/") home
           li
             a(href="/collections") collection demo
           li
             a(href="/info") more info
-
-    main#pages(role="page-container")
+  .container
+    main(role="page-container")
