--- a/template/shared/templates/includes/person.jade
+++ b/template/shared/templates/includes/person.jade
@@ -1,6 +1,6 @@
-li.person
+li.person.list-group-item
   img(role="avatar", width="40", height="40")
   a(role="name")
-  span  
-    a.btn(role="action-edit") edit 
-    a.btn(href="#", role="action-delete") delete
+  span.btn-group.pull-right 
+    a.btn.btn-default(role="action-edit") edit 
+    a.btn.btn-danger(href="#", role="action-delete") delete
